--- a/app/src/main/res/layout/activity_recyclerview.xml
+++ b/app/src/main/res/layout/activity_recyclerview.xml
@@ -74,6 +74,7 @@
 
             <RadioButton
                 android:id="@+id/rbRcvSimpleListAdapter"
+                android:onCheckedChanged="@{(_,checked)->vm.onCheckRcvListSimpleAdapter(checked)}"
                 style="@style/RecyclerViewActivity.RadioButton"
                 android:text="SimpleList" />
 
