--- a/app/src/main/res/layout/activity_location.xml
+++ b/app/src/main/res/layout/activity_location.xml
@@ -11,25 +11,25 @@
         android:orientation="vertical">
 
         <TextView
-            android:text="Location Turn On/Off"
+            android:text="Location Turn On ?"
             android:id="@+id/tvLocationTurnOnOff"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
         <TextView
-            android:text="Location Turn On/Off"
+            android:text="Location Network Turn On ?"
             android:id="@+id/tvLocationNetworkTurnOnOff"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
         <TextView
-            android:text="Location Turn On/Off"
+            android:text="Location Passive Turn On ?"
             android:id="@+id/tvLocationPassiveTurnOnOff"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
         <TextView
-            android:text="Location Turn On/Off"
+            android:text="Location Fused Turn On ?"
             android:id="@+id/tvLocationFusedTurnOnOff"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
