--- a/app/src/main/res/layout/activity_recyclerview.xml
+++ b/app/src/main/res/layout/activity_recyclerview.xml
@@ -81,7 +81,7 @@
 
         </RadioGroup>
 
-        <kr.open.rhpark.library.ui.recyclerview.view.RecyclerScrollStateView
+        <kr.open.rhpark.library.ui.view.recyclerview.RecyclerScrollStateView
             android:id="@+id/rcvList"
             android:layout_width="match_parent"
             android:layout_height="0dp"
