--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -54,5 +54,13 @@
             app:layout_constraintTop_toBottomOf="@+id/btnToastSnackbar"
             app:layout_constraintLeft_toLeftOf="parent" />
 
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="@{()->vm.onClickShowDialog()}"
+            android:text="show Dialog"
+            app:layout_constraintTop_toBottomOf="@+id/btnToastSnackbar"
+            app:layout_constraintLeft_toLeftOf="parent" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
